# SCARAG

./: .gitignore  README.md  TODO.md  api_server.py  fallback_template.json  pyproject.toml  requirements.txt  start_everything.sh
config/: README.md  synonyms.json
docs/: api-contract-migrations.md  confidence-framework.md  deployment-boundaries.md  evaluation-blueprint.md  frontend-principles.md  frontend-state-model.md  generation-contract.md  implementation-status.md  lifecycle-design.md  maintainer-checklist.md  metadata-model.md  nlp-tailoring-guide.md  philosophy.md  reconstruction-status.md  reference-ui-contract.md  retrieval-design.md  tabular-grounding.md
eval/datasets/: README.md  canonical.jsonl  drift.jsonl  regression.jsonl
eval/reports/: offline_eval_20260716T140602Z.json  (+1 more)
frontend/: index.html  package-lock.json  package.json
profiles/: default.json
scarag/: __init__.py  config.py  metadata.py  pipeline.py  provenance.py  tabular_grounding.py
scripts/: dedupe_corpus.py  fallbacks.py  lifecycle_audit_report.py  lifecycle_cleanup.py  reset_eval_workspace.py  run_eval.py  start_everything.ps1  start_everything.sh
tests/: test_api.py  test_api_contract_stability.py  test_chunking_policies.py  test_confidence_resolver.py  test_dependency_metadata.py  test_eval_expectation_metrics.py  test_fallbacks.py  test_lifecycle_persistence.py  test_metadata_contracts.py  test_profile_overlays.py  test_provenance_validator.py  test_retrieval_backends.py  test_retrieval_lifecycle_filters.py  test_tabular_chunking.py  test_tabular_grounding.py
(+16 files in other folders)
