[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scarag"
version = "0.1.0"
description = "Schema-Centric Agnostic RAG reference framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scarag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
