[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scarag"
version = "0.1.0"
description = "Schema-Centric Agnostic RAG reference framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pypdf>=5.0",
  "pdfplumber>=0.11",
  "python-docx>=1.1",
  "python-pptx>=1.0",
  "openpyxl>=3.1",
  "beautifulsoup4>=4.12",
  "lxml>=5.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scarag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
